# code

./: .gitattributes  .gitignore  Cargo.toml  README.md  justfile  rewrite.py  rewrite2.py  rewrite3.py  rewrite4.py
.cargo/: config.toml
crates/dx_catalog/: Cargo.toml
crates/dx_catalog/src/: adapters.rs  agent_picker.rs  artifact.rs  error.rs  execution.rs  file_limits.rs  generator.rs  lib.rs  materialize.rs  model_catalog_readers.rs  provider_readers.rs  providers_catalog_readers.rs  sources.rs  status.rs  types.rs
lobechat_icons_parser/: Cargo.toml
script/: dx-agent-bridge-source.test.ts  dx-agent-composer-liquid-glass-source.test.ts  dx-agent-configuration-modal-source.test.ts  dx-agent-configuration-source.test.ts  dx-agent-connections-ui-source.test.ts  dx-agent-plugin-runtime-status-source.test.ts  dx-agent-thread-view-source.test.ts  dx-agent-ui-selector-source.test.ts  dx-agent-voice-controls-source.test.ts  dx-agent-workspaces-source.test.ts  dx-ai-search-profile-source.test.ts  dx-automations-source.test.ts  dx-check-panel-source.test.ts  dx-deploy-launch-gate-source.test.ts  dx-deploy-panel-source.test.ts  dx-deploy-receipts-source.test.ts  dx-editor-power-rainbow-source.test.ts  dx-evidence-basket-source.test.ts  dx-font-panel-source.test.ts  dx-forge-panel-source.test.ts  dx-gpui-gradient-source.test.ts  dx-handoff-source-guard-registry.test.ts  dx-icon-hover-source.test.ts  dx-icon-picker-source.test.ts  dx-icon-system-source.test.ts  dx-icon-theme-source.test.ts  dx-language-model-selector-source.test.ts  dx-launch-audit-source.test.ts  dx-launch-binary-cache-source.test.ts  dx-launch-receipts-source.test.ts  dx-launch-source-audit-source.test.ts  (+26 more)
web/3D/src-tauri/: Cargo.toml  tauri.conf.json
web/3D/src-tauri/capabilities/: default.json
web/3D/src-tauri/src/: lib.rs  main.rs
web/Design/src-tauri/: Cargo.toml  tauri.conf.json
web/Design/src-tauri/src/: desktop_bridge.rs  lib.rs  main.rs
web/Spreadsheets/src-tauri/: Cargo.toml  tauri.conf.json
web/Spreadsheets/src-tauri/capabilities/: default.json
web/Spreadsheets/src-tauri/icons/: icon.icns
web/Spreadsheets/src-tauri/src/: lib.rs  main.rs
zzz/: check.py
(+6269 files in other folders)
