[package]
name = "essence-spline"
version = "0.1.0"
description = "A free 3D design workspace built with Next.js and Tauri."
authors = ["essencefromexistence"]
edition = "2021"

[lib]
name = "essence_spline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
rfd = "0.15"
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
