[package]
name = "essence-excel"
version = "0.1.0"
description = "A free spreadsheet workspace."
authors = ["essencefromexistence"]
edition = "2021"

[lib]
name = "essence_excel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
